Add movies favorite filter
